# basic-ewm

./: .gitignore  README.md  pyproject.toml
src/: .gitignore  __init__.py
src/ewm/: __init__.py  abstract.py  implement.py
tests/: test.py
