[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lepecin-ewm"
version = "0.0.1"
authors = [{name="Ivan Silajev"}]
description = "Simple package for EWM functions."
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


